package com.kleematik.katabank.domain.model.client;

import lombok.AllArgsConstructor;
import lombok.RequiredArgsConstructor;

@AllArgsConstructor(staticName = "of")
public class Client
{
}
